--- a/src/components/globalStyles.css
+++ b/src/components/globalStyles.css
@@ -346,3 +346,6 @@ p:blank {
  
 }
 
+main.ResponsiveDrawer-content-7{
+  padding: 0;
+}
